# ml-water

./: .gitignore  README.md  pyproject.toml
src/ml_water/: main.py
src/ml_water/classes/: dataset.py  unet.py
src/ml_water/helpers/: constants.py  image_funcs.py  initializations.py  neural_network.py  nn_state.py  path.py
src/ml_water/scripts/: prepare_data.py  prepare_mask.py  train_evaluate.py
