[project]
name = "ml-water"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Pavlo Kundenko", email = "pavel.kundenko@gmail.com" }
]
dependencies = [
    "torch>=2.4.0",
    "rasterio>=1.3.10",
    "numpy>=2.1.0",
    "torchvision>=0.19.0",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.5.1",
    "opencv-python>=4.10.0.84",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ml_water"]
